infra/cilium/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: web
  namespace: infra
spec:
  gatewayClassName: cilium
  listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      name: web-gw
      port: 80
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      name: websecure-gw
      port: 443
      protocol: HTTPS
